# slack-emoji-tracker

./: .env.example  .env.test  .gitignore  LICENSE  README.md  alembic.ini  create_sample_data.py  docker-compose.yml  docker-pg_hba.conf  init-db.sql  main.py  pyproject.toml
config/: emoji_config.json
migrations/: env.py
migrations/versions/: 608ceca06edd_add_message_text_to_emoji_usage.py
src/: __init__.py
src/api/: main.py
src/database/: __init__.py  connection.py
src/models/: database.py
src/services/: emoji_tracker.py
src/slack/: __init__.py  event_listener.py
src/slack_emoji_tracker/: __init__.py  api.py  config.py  database.py  giphyintegration.py  gptintegration.py  models.py  schemas.py  service.py  slack_service.py
src/utils/: config.py
